added lightweight version of habit-at and some css testing

--- a/webserver/templates/add.html
+++ b/webserver/templates/add.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Add</title>
+<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='/style.css') }}">
 </head>
 <body>
     <h1>What is the name of the habit you would like to add?</h1>
