--- a/webserver/templates/delete.html
+++ b/webserver/templates/delete.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Delete</title>
+<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='/style.css') }}">
 </head>
 <body>
     <h1>Which habit would you like to delete?</h1>
