--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Habit-at hub</title>
+<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='/style.css') }}">
 </head>
 <body>
     <h1>Habit-at hub</h1>
