--- a/webserver/templates/success.html
+++ b/webserver/templates/success.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Success!</title>
+<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='/style.css') }}">
 </head>
 <body>
     <h1>Success!</h1>
